# LaserFeelings

./: .env.example  .gitignore  CLAUDE.md  CODE_REVIEW_FIXES_SUMMARY.md  MISSING_FEATURES.md  langgraph-orchestration-research.md  main.py  pyproject.toml  start_workers.sh
.claude/: settings.local.json
.specify/memory/: constitution.md
config/personalities/: README.md  agent_alex_001_full.json  agent_alex_001_personality.json  agent_jordan_004_full.json  agent_jordan_004_personality.json  agent_morgan_002_full.json  agent_morgan_002_personality.json  agent_sam_003_full.json  agent_sam_003_personality.json  campaign_config.json  char_kai_004_character.json  char_nova_002_character.json  char_quinn_003_character.json  char_zara_001_character.json
docker/: docker-compose.yml
docs/: dm-cli-implementation.md  lasers_and_feelings_rules.md
examples/: demo_cli.py  dice_suggestion_output_example.txt
scripts/: __init__.py  seed_personalities.py  setup.sh  setup_neo4j.py
specs/: Textual.md  gpt4o-persona-research.md  redis-rq-state-management-research.md
specs/001-ai-ttrpg-players/: data-model.md  extension-character-state.md  plan.md  quickstart.md  research.md  spec.md  tasks-enhanced-example.md  tasks.md
src/: __init__.py
src/agents/: base_persona.py  character.py  exceptions.py  llm_client.py
src/config/: __init__.py  prompts.py  settings.py
src/interface/: __init__.py  __main__.py  dm_cli.py  dm_textual.py  ooc_monitor.py
src/memory/: corrupted_temporal.py  exceptions.py  graphiti_client.py
src/models/: __init__.py  game_state.py  (+6 more)
tests/: conftest.py
(+90 files in other folders)
